ColorLabs17/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\ssuresh\Desktop\APCS Classroom\colorlabs21-ssarayu25\ColorLabs17\+libs\mediaComp.jar;C:\Users\ssuresh\Desktop\APCS Classroom\colorlabs21-ssarayu25\ColorLabs17
-d
C:\Users\ssuresh\Desktop\APCS Classroom\colorlabs21-ssarayu25\ColorLabs17\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\ssuresh\Desktop\APCS Classroom\colorlabs21-ssarayu25\ColorLabs17\bookClasses\Picture.java
<---- end of javadoc command ---->
Loading source file C:\Users\ssuresh\Desktop\APCS Classroom\colorlabs21-ssarayu25\ColorLabs17\bookClasses\Picture.java...
Constructing Javadoc information...
C:\Users\ssuresh\Desktop\APCS Classroom\colorlabs21-ssarayu25\ColorLabs17\bookClasses\SimplePicture.java:43: error: cannot access PictureFrame
  private PictureFrame pictureFrame;
          ^
  bad source file: C:\Users\ssuresh\Desktop\APCS Classroom\colorlabs21-ssarayu25\ColorLabs17\bookClasses\PictureFrame.java
    file does not contain class bookClasses.PictureFrame
    Please remove or make sure it appears in the correct subdirectory of the sourcepath.
1 error
